feat: load backtesting symbols from live market SymbolAgentManager with proper fallback